tests/snapshots/parser_tests__error_recovery__error_recovery_multiple_errors.snap
---
source: tests/parser_tests.rs
expression: "(ast, errors)"
---
(
    Some(
        Document {
            children: [
                Object {
                    entries: [
                        ObjectEntry {
                            key: "valid",
                            key_span: Span {
                                start: Position {
                                    line: 2,
                                    column: 0,
                                    offset: 19,
                                },
                                end: Position {
                                    line: 2,
                                    column: 5,
                                    offset: 24,
                                },
                            },
                            value: Bool {
                                value: true,
                                span: Span {
                                    start: Position {
                                        line: 2,
                                        column: 7,
                                        offset: 26,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 11,
                                        offset: 30,
                                    },
                                },
                            },
                        },
                    ],
                    span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 2,
                            column: 11,
                            offset: 30,
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 2,
                    column: 11,
                    offset: 30,
                },
            },
        },
    ),
    [
        ParseError {
            kind: ExpectedColon,
            span: Span {
                start: Position {
                    line: 0,
                    column: 5,
                    offset: 5,
                },
                end: Position {
                    line: 0,
                    column: 10,
                    offset: 10,
                },
            },
            context: None,
        },
        ParseError {
            kind: ExpectedColon,
            span: Span {
                start: Position {
                    line: 0,
                    column: 5,
                    offset: 5,
                },
                end: Position {
                    line: 0,
                    column: 10,
                    offset: 10,
                },
            },
            context: None,
        },
        ParseError {
            kind: ExpectedColon,
            span: Span {
                start: Position {
                    line: 1,
                    column: 4,
                    offset: 15,
                },
                end: Position {
                    line: 1,
                    column: 7,
                    offset: 18,
                },
            },
            context: None,
        },
        ParseError {
            kind: ExpectedColon,
            span: Span {
                start: Position {
                    line: 1,
                    column: 4,
                    offset: 15,
                },
                end: Position {
                    line: 1,
                    column: 7,
                    offset: 18,
                },
            },
            context: None,
        },
    ],
)
