tests/snapshots/parser_tests__error_recovery__error_recovery_resumes.snap
---
source: tests/parser_tests.rs
expression: "(ast, errors)"
---
(
    Some(
        Document {
            children: [
                Object {
                    entries: [],
                    span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 1,
                            offset: 1,
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 0,
                    column: 1,
                    offset: 1,
                },
            },
        },
    ),
    [],
)
